manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-profile-service
  labels:
    app: workshop-profile-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop-profile-service
  template:
    metadata:
      labels:
        app: workshop-profile-service
    spec:
      containers:
      - name: workshop-profile-service
        image: lqbl0acr0shared.azurecr.io/workshop-profile-service:3757878
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: workshop-profile-service
spec:
  selector:
    app: workshop-profile-service
  ports:
  - name: rest-api
    protocol: TCP
    port: 8080
    targetPort: 8080
