manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #   nginx.ingress.kubernetes.io/use-regex: "true"
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: workshop-ingress
spec:
  rules:
  - host: workshop-api.z-unified.com
    http:
      paths:
        - path: /profile-service
          pathType: Prefix
          backend:
            service: 
              name: workshop-profile-service
              port: 
                number: 8080
  tls:
  - hosts:
    - workshop-api.z-unified.com
    secretName: zunified-tls
